수정: Vercel 배포 설정 개선 및 빌드 스크립트 수정 - Claude Code

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "cd server && npm run dev",
-    "build": "cd client && npm run build",
+    "build": "cd client && npm install && npm run build",
+    "start": "cd server && npm start",
     "init-firestore": "node functions/init-firestore.js"
   },
   "dependencies": {
